@@ -1,5 +1,7 @@
 2010-01-03  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
+	* library/tearoff.tcl: tearoff menus should be transient and use the
+	                       toolwindow style on Windows.
 	* tests/menu.test: menu tests using 'tkwait visibility' are unix only.
 
 2010-01-02  Donal K. Fellows  <dkf@users.sf.net>
